[package]
name = "x11-screenshot"
version = "0.1.0"
authors = ["TheHellBox <thehellbox11@gmail.com>"]
keywords = ["X11", "screen", "screenshot", "capture"]
license = "MIT"
repository = "https://github.com/TheHellBox/x11-screenshot-rs"
description = "Screenshots with x11"

[features]
# Interop with the `image` crate
image-interop = ["image"]
default = ["image-interop"]

[dependencies.image]
version = "0.21.0"
default-features = false
optional = true

[dependencies.x11]
version = "2.16.0"
features = ["xlib"]

[[example]]
name = "save-png"
required-features = ["image-interop", "image/png_codec"]

[[example]]
name = "get-pixel"
